fix screen shot spacing

--- a/kunquat.css
+++ b/kunquat.css
@@ -29,6 +29,16 @@ iframe.menu
 	width: 100%;
 	height: 6em;
 }
+div.screen_shot
+{
+	float: right;
+	margin-left: 1em;
+	margin-top: 1em;
+}
+div.screen_shot img
+{
+	width: 500px;
+}
 .warning
 {
 	color: #f00;
